--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,11 @@
 .App {
   text-align: center;
 }
+.titlebar {
+  user-select: none;
+  -webkit-user-select: none;
+  -webkit-app-region: drag;
+}
 /*
 .App-logo {
   height: 40vmin;
@@ -120,7 +125,6 @@
     font: normal 1.8em arial, sans-serif;
     text-align: center;
     margin-top: 7%;
-    color: black;
   }
   ul {
     list-style: none;
@@ -150,11 +154,12 @@
     font-size: large;
     text-align: center;
     position: relative;
-    border-radius: 40px;
+    border-radius: 40px; 
+    color: #ffffff;
   }
   .nav-link:hover{
     border-radius: 40px;
-    background-color: grey; 
+    background-color: #fff; 
   }
   #btnComprar {
     float: right;
